# xfce4-hotcorner-plugin

./: CMakeLists.txt  Makefile.am  Makefile.in  README.md  autogen.sh  config.h.in  configure  configure.ac.in
po/: Makefile.in  POTFILES.in  gl.po  zh_TW.po
src/: Makefile.am  Makefile.in  hotcorner.c  hotcorner.desktop.in  hotcorner.h  util.c
